# aoc23

./: .gitattributes  aoc23.cabal
inputs/: day1.txt  day2.txt
problems/: day2.txt
src/: day1.hs  day2.hs
